PROJECT: last cosmetic changes
Signed-off-by: gabrielgagz <g.a.gomez@gmail.com>

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,12 @@
 .Header__img-logo{
     width: 55%;
 }
+
+.Header__check {
+    color:rgb(133, 177, 133);
+    
+}
+
+.Header__check_0 {
+    opacity: 0%;
+}
