--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 html, body {
+  padding-top: 50px;
   margin: 0;
   font-family: 'Roboto', sans-serif;
   background-color: #ededed;
@@ -11,3 +12,8 @@ code {
     monospace;
 }
 
+.form-control:focus {
+  border-color: inherit;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
