HOME: "paginate" posts
Signed-off-by: gabrielgagz <g.a.gomez@gmail.com>

--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -1,5 +1,17 @@
-.container-posts{
+.container-posts {
     padding: 0 4em 0 4em;
+}
+
+.HomePage__btn-more {
+    color: white;
+    background-color: #292b2c;
+    font-weight: bold;
+    font-size: smaller;
+}
+
+.HomePage__btn-more:hover {
+    color: white;
+    background-color: #292b2c;
 }
 
 @media only screen and (max-width: 600px) {
