HEADER/HOME: cosmetical changes
Signed-off-by: gabrielgagz <g.a.gomez@gmail.com>

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -10,3 +10,16 @@
 .Header__check_0 {
     opacity: 0%;
 }
+
+.Header__right {
+    font-size: small;
+    font-weight: bold;
+}
+
+@media only screen and (max-width: 600px) {
+
+    .Header__right {
+        padding-top: 2em;
+    }
+
+}
